<resources>
    <string name="app_name">ConstraintLayouttest</string>
    <string name="zhongda">中山大学学生信息系统</string>
    <string name="xuehao">学号：</string>
    <string name="mima">密码：</string>
    <string name="inxuehao">请输入学号</string>
    <string name="inmima">请输入密码</string>
    <string name="signin">登陆</string>
    <string name="signup">注册</string>
    <string name="xuesheng">学生</string>
    <string name="jiaozhigong">教职工</string>
</resources>
